fixed text align rule

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@ header{
     margin: -10px;
     margin-bottom: 0px;
     color: rgb(124, 119, 119);
-    text-align: cnter;
+    text-align: center;
     vertical-align: middle;
     font-size: 2rem;
     font-family: 'Roboto';
